--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,12 +21,17 @@
           <%= link_to('Edit registration', edit_user_registration_path) %>
         </li>
       <% else %>
-        <li>
-          <%= link_to('Login', new_user_session_path) %>  
-        </li>
-        <li>
-          <%= link_to('Sign Up', new_user_registration_path) %>
-        </li>
+          <% if !(controller_name == "sessions" && action_name == "new") %>
+            <li>
+              <%= link_to('Login', new_user_session_path) %>  
+            </li>
+          <% end %>
+
+          <% if !(controller_name == "registrations" && action_name == "new") %>
+            <li>
+              <%= link_to('Sign Up', new_user_registration_path) %>
+            </li>
+        <% end %>
       <% end %>
     </ul>
     <%= yield %>
