done my App and try to start css

--- a/app/views/info_self_cares/_form.html.erb
+++ b/app/views/info_self_cares/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :date_frome %>
-    <%= form.date_select :Date_frome %>
+    <%= form.date_select :date_frome %>
   </div>
 
   <div class="field">
