--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -1,1 +1,51 @@
-<h1>Welcome</h1>
+
+
+    <!-----------------------------------tool par--------------------------------------->
+    <div id="fh5co-wrapper">
+    <div id="fh5co-page">
+    <div id="fh5co-header">
+        <header id="fh5co-header-section">
+            <div class="container">
+                <div class="nav-header">
+                    <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
+                    <h1 id="fh5co-logo"><a href="index.html">Energy</a></h1>
+                    <!-- START #fh5co-menu-wrap -->
+                    <nav id="fh5co-menu-wrap" role="navigation">
+                        <ul class="sf-menu" id="fh5co-primary-menu">
+
+                            <li><a href="work.html">singin</a></li>
+                            <li><a href="blog.html">singup</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </header>		
+    </div>
+    
+    <!-- end:fh5co-header -->
+    <!---------------------------------End tool par--------------------------------------->
+
+    <!-----------------------------------welcome statment--------------------------------------->
+    <aside id="fh5co-hero" class="js-fullheight">
+        <div class="flexslider js-fullheight">
+            <ul class="slides">
+               <li style="background-image: url(images/slide_1.jpg);">
+                   <div class="overlay-gradient"></div>
+                   <div class="container">
+                       <div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
+                           <div class="slider-text-inner">
+                               <h2>Welcome To Self Care Application</h2>
+                               <p><a href="#" class="btn btn-primary btn-lg">Get started</a></p>
+                           </div>
+                       </div>
+                   </div>
+               </li>
+              </ul>
+          </div>
+    </aside>
+<!-----------------------------------End welcome statment--------------------------------------->
+  
+
+
