--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -1,2 +1,14 @@
-<p>Welcome to home page</p>
+
+ <div >
+ <%= image_tag("SelfCareImage.jpeg", height: 300, width: 1200, alt: "self care image") %>
+</div>
+
+
+
+
+
+
+
+
+
 
