--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -1,6 +1,10 @@
 
- <div >
- <%= image_tag("SelfCareImage.jpeg", height: 300, width: 1200, alt: "self care image") %>
+ <div class="container">
+ <%= image_tag("image1.jpg", height: 400, width: 900, alt: "self care image") %>
+ <div class="text-block">
+ <h1>Welcome</h1>
+ <h2 style="color:purple">To <span style="color:MediumVioletRed">Selfe Care</span> Applcation</h2>
+</div>
 </div>
 
 
