--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,6 +1,6 @@
 
 
-<div class="container" style="background-color:#f1f1f1">
+<div class="container shared" style="background-color:#f1f1f1">
 
   <%- if controller_name != 'sessions' %>
     <%= link_to "Log in", new_session_path(resource_name), class: "cancelbtn" %><br />
