--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,11 +39,14 @@
         <% end %>
       <% end %>
       <li>
-      <%= link_to('About', about_path) %>
-    </li>
-    <li>
-    <%= link_to('Contact', contact_us_path) %>
-  </li>
+        <%= link_to('About', about_path) %>
+      </li>
+      <li>
+        <%= link_to('Contact', contact_us_path) %>
+      </li>
+      <li>
+        <%= link_to('Home', home_page_path) %>
+      </li>
     </ul>
     </header >
     
@@ -62,11 +65,6 @@
         <li class="box">
             <h3 ><%= link_to('Contact', contact_us_path) %></h3>
             <p> Self Care is application  to schedule you self and you can use it as a noit</p>
-        </li>
-        <li class="box">
-        <h3 ><%= link_to('Home', home_page_path) %></h3>
-        <p> Self Care is application  to schedule you self and you can use it as a noit</p>
-       </li>
   
     </ul>
 </div>
