--- a/app/views/home_page/contact_us.html.erb
+++ b/app/views/home_page/contact_us.html.erb
@@ -1,11 +1,8 @@
 <div class="selfCareInfo">
 <h1> To Contact Us </h1>
-<p>fdsaf asdf das fdas dfsa fdsa fdsa fdsa fsadf fdasdsfdsaf dsa  </p>
-<p>fgvhbjnjhgfhj</p>
-<p>fgvhbjnjhgfhj</p>
-<p>fgvhbjnjhgfhj</p>
-<p>fgvhbjnjhgfhj</p>
-<p>fgvhbjnjhgfhj</p>
+<p>if you would like to Contact us you can Contactby: </p>
+<p>Email:Somayah@Bahkeem.com </p>
+<p>Phone:05053712345 </p>
 </div>
 
 
