--- a/app/views/info_self_cares/new.html.erb
+++ b/app/views/info_self_cares/new.html.erb
@@ -1,5 +1,7 @@
+<div class="selfCarSEN">
 <h1>New Info Self Care</h1>
 
 <%= render 'form', info_self_care: @info_self_care %>
 
 <%= link_to 'Back', info_self_cares_path %>
+</div>
