--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,7 +64,9 @@
         </li>
         <li class="box">
             <h3 ><%= link_to('Contact', contact_us_path) %></h3>
-            <p> Self Care is application  to schedule you self and you can use it as a noit</p>
+            <p>Email:Somayah@Bahkeem.com </p>
+            <p>Phone:05053712345 </p>
+        </li>
   
     </ul>
 </div>
