--- a/app/views/info_self_cares/show.html.erb
+++ b/app/views/info_self_cares/show.html.erb
@@ -1,3 +1,4 @@
+<div class="selfCarSEN">
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -37,3 +38,4 @@
 
 <%= link_to 'Edit', edit_info_self_care_path(@info_self_care) %> |
 <%= link_to 'Back', info_self_cares_path %>
+</div>
