changes in pargraph

--- a/app/views/home_page/about.html.erb
+++ b/app/views/home_page/about.html.erb
@@ -1,11 +1,8 @@
 <div class="selfCareInfo">
 <h1> About Slfe Care </h1>
-<p>fdsaf asdf das fdas dfsa fdsa fdsa fdsa fsadf fdasdsfdsaf dsa  </p>
-<p>fgvhbjnjhgfhj</p>
-<p>fgvhbjnjhgfhj</p>
-<p>fgvhbjnjhgfhj</p>
-<p>fgvhbjnjhgfhj</p>
-<p>fgvhbjnjhgfhj</p>
+<p>Self Care is application to schedule you self and </p>
+<p>you can use it as a noit  </p>
+
 </div>
 
 
