--- a/app/views/home_page/slfeCareInfo.html.erb
+++ b/app/views/home_page/slfeCareInfo.html.erb
@@ -1,10 +1,10 @@
 <div class="selfCareInfo">
 <h1>Slfe Care Information</h1>
-<p>fdsaf asdf das fdas dfsa fdsa fdsa fdsa fsadf fdasdsfdsaf dsa  </p>
-<p>fgvhbjnjhgfhj</p>
-<p>fgvhbjnjhgfhj</p>
-<p>fgvhbjnjhgfhj</p>
-<p>fgvhbjnjhgfhj</p>
-<p>fgvhbjnjhgfhj</p>
+<p>Self-care is any activity that we do deliberately in order  </p>
+<p>to take care of our mental, emotional, and physical health. </p>
+<p>Although it's a simple concept in theory, it's something we very </p>
+<p>often overlook.Good self-care is key  </p>
+<p>to improved mood and   </p>
+
 </div>
 
